lit review alterations done

--- a/03_background/literature_review.tex
+++ b/03_background/literature_review.tex
@@ -40,6 +40,8 @@ Alternate realities, any situations in which the environmental stimuli received 
 
 This chapter investigates popular definitions, classifications \& comparisons of alternate realities, combining \& modifying these parameters to produce a canonical set of definitions for the remainder of this thesis, allowing \textit{parallel reality} to be introduced into a sound classification framework.
 
+The concept of \textit{telepresence} is not included in this discussion, as it is not deemed representative of an \textit{alternate} reality but rather the ability for a user to experience a sense of presence at a real location remote to them~\cite{Sheridan1992a}. \textbf{***Check that this is a valid citation for this!}
+
 \subsection{Milgram et al.'s Reality-Virtuality Continuum}
 \label{milgram&kishino}
 Milgram et al. addressed the issue of alternate reality definitions in detail and can be accredited with introducing the terms \textit{augmented virtuality} and \textit{mixed reality} to the literature, prompted by their identification of the need for more encompassing terms to supplement the existing definitions of augmented reality~\cite{Milgram1994, Milgram1999}.
@@ -120,7 +122,13 @@ Mann's Venn diagram (figure \ref{Mann_venn_original.png}) places augmented reali
     \label{Mann_venn_mod_1.png}
 \end{minipage}
 
-\vspace{5mm}
+%%%
+\end{figure}
+
+%\vspace{5mm}
+
+%%%
+\begin{figure}[h]
 
 \centering
   \includegraphics[width=0.5\linewidth]{Mann_venn_mod_3.png}
@@ -142,7 +150,7 @@ This final iteration of the Venn diagram still contains ambiguity, however it is
 %=========================================================================================================
 %=========================================================================================================
 
-\clearpage
+%\clearpage
 
 \section{Summary of Alternate Reality Definitions}
 \label{summaryofalternaterealitydefinitions}
@@ -563,21 +571,21 @@ The OASIS is similar to Snow Crash's Metaverse; a fictional multi-user 3D enviro
 
 \section{Presence}
 
-Any investigation into alternate realities, virtual reality in particular, is likely to involve discussion of \textit{presence} - the subjective experience of being in one place or environment, even when one is physically situated in another~\cite{Witmer1998}. Presence is distinguished from the concept of \textit{immersion}, an objective description of a technology, describing the extent to which it is capable of delivering an illusion of reality to the sense of the user~\cite{Slater1997}. In current theoretical models, the sense of presence is seen as the outcome, or a direct function of, immersion; the more inclusive, extensive, surrounding \& vivd the VE is, or the more similar the transformations in the VE are to those in the real world, the higher the presence~\cite{Constantin2003}.
+Any investigation into alternate realities, virtual reality in particular, is likely to involve discussion of \textit{presence} - the subjective experience of being in one place or environment, even when one is physically situated in another~\cite{Witmer1998}. Presence is distinguished from the concept of \textit{immersion}, an objective description of a technology describing the extent to which it is capable of delivering an illusion of reality to the senses of the user~\cite{Slater1997}. In current theoretical models, the sense of presence is seen as the outcome, or a direct function of, immersion; the more inclusive, extensive, surrounding \& vivd the virtual environment is, or the more similar the transformations in the virtual environment are to those in the real world, the higher the sense of presence~\cite{Constantin2003}.
 
-Related is the concept of involvement, defined in this context as the psychological state experienced as a consequence of focusing one's energy \& attention on a coherent set of stimuli \& it is theorized that both involvement \& immersion are necessary for experienced presence~\cite{Witmer1998}.
+Related is the concept of \textit{involvement}, defined in this context as the psychological state experienced as a consequence of focusing one's energy \& attention on a coherent set of stimuli \& it is theorized that both involvement \& immersion are necessary for experiencing a sense of presence~\cite{Witmer1998}.
 
-\subsection{Waterworth \& Waterworth three dimensions of virtual experience model}
+\subsection{Waterworth \& Waterworth's three dimensions of virtual experience}
 
-\newcommand{\presencefootnote}{\footnote{\textbf{Presence} in this context is defined as a state of heightened perceptual processing of environmental stimuli (\textit{``a psychological focus on direct perceptual processing''}~\cite{Waterworth2001}) accompanied by lessened conceptual reasoning, whether these environmental stimuli originate from a real environment, a virtual environment, a mixed reality environment, or even from multiple discrete environments.}}
+\newcommand{\presencefootnote}{\footnote{\textbf{Presence} in the context of this model is defined as a state of heightened perceptual processing of environmental stimuli (\textit{``a psychological focus on direct perceptual processing''}~\cite{Waterworth2001}) accompanied by lessened conceptual reasoning, whether these environmental stimuli originate from a real environment, a virtual environment, a mixed reality environment, or even from multiple discrete environments.}}
 
 \newcommand{\absencefootnote}{\footnote{\textbf{Absence} is defined as \textit{``a psychological focus on \ldots\ conceptual processing''}~\cite{Waterworth2001}.}}
 
-This notion of the sense of presence depending upon multiple factors is explored further by Waterworth \& Waterworth who present the \textit{three dimensions of virtual experience} model~\cite{Waterworth2001}. In this model, the \textit{locus of attention} axis represents the environment where the stimuli that the user is perceiving originate from; the \textit{focus of attention} axis represents the balance between conceptual/abstract reasoning \& perceptual/concrete processing, where complex conceptual reasoning results in little attention being paid to processing environmental percepts (whether originating from real or virtual stimuli) thus reducing presence\presencefootnote{} in that environment toward its antithesis $-$ absence\absencefootnote{}; and the \textit{sensus of attention} axis represents the level of conscious arousal (or `wakefulness'~\cite{Laureys2009}) of the user, whether directed toward percepts originating from real stimuli, virtual stimuli, a mix, or not directed toward any percepts in the case of completely `absent' conceptual reasoning.
+This notion of the sense of presence depending upon multiple factors is explored further by Waterworth \& Waterworth who present the \textit{three dimensions of virtual experience} model~\cite{Waterworth2001}. In this model, the \textit{locus of attention} axis represents the environment where the stimuli that the user is perceiving originate from; the \textit{focus of attention} axis represents the balance between conceptual/abstract reasoning \& perceptual/concrete processing, where complex conceptual reasoning results in little attention being paid to processing environmental percepts (whether originating from real stimuli, virtual stimuli, or a mix) thus reducing presence\presencefootnote{} in that environment toward its antithesis $-$ absence\absencefootnote{}; and the \textit{sensus of attention} axis represents the level of conscious arousal (or `wakefulness'~\cite{Laureys2009}) of the user, whether directed toward percepts originating from real stimuli, virtual stimuli, or a mix, or not directed toward any percepts in the case of completely `absent' conceptual reasoning.
 
-In this model, the notion of \textit{involvement} relates most closely to the \textit{focus of attention} axis; heightened involvement pertains to concentrating on environmental stimuli or meaningfully related activities \& events, while heightened focus pertains to increased perceptual/concrete processing; lessened involvement pertains to a preoccupation with personal problems or activities occurring outwith the environment of interest, while lessened focus pertains to increased conceptual/abstract reasoning.
+In this model, the notion of \textit{involvement} relates closely to the \textit{focus of attention} axis; heightened involvement pertains to concentrating on environmental stimuli or meaningfully related activities \& events, while heightened focus pertains to increased perceptual/concrete processing; lessened involvement pertains to a preoccupation with personal problems or activities occurring outwith the environment of interest, while lessened focus pertains to increased conceptual/abstract reasoning.
 
-Similarly, a relationship can be drawn between Milgram \& Kishino's virtuality continuum \& the three dimensions of virtual experience model, with the virtuality continuum here considered to be analogous to the \textit{locus of attention} axis; the combination of these models is shown by figure \ref{focus-locus-sensus-with-virtuality-continuum}.
+Similarly, a relationship can be drawn between this model \& Milgram et al.'s virtuality continuum, with the latter considered here to be analogous to the \textit{locus of attention} axis; the combination of these models is shown by figure \ref{focus-locus-sensus-with-virtuality-continuum}.
 
 \begin{figure}[h]
 	\begin{center}
@@ -597,7 +605,7 @@ Similarly, a relationship can be drawn between Milgram \& Kishino's virtuality c
 
 \section{Transitions in Parallel Reality}
 
-\newcommand{\breakinpresencefootnote}{\footnote{The definition of \textbf{break in presence} adopted herein is the second from Waterworth \& Waterworth~\cite{Waterworth2001} (p205): a movement along the focus axis away from presence in the real or a virtual environment \& toward absence, which also relates to a reduction in \textit{involvement}. This differs to Slater \& Steed's original definition in~\cite{Slater2000} as they considered presence only in terms of attending to stimuli from a virtual environment, with a break in presence as a Gestalt switch to instead attending to stimuli from the real environment. Waterworth \& Waterworth's model considers presence in terms of attending to stimuli from either the real \textit{or a virtual} environment, with a break in presence representing absence in the sense of heightened conceptual load \& the resultant reduced perceptual processing of environmental stimuli originating from \textit{either} the real or a virtual environment. This definition better fits the situation invoked by the Mirrorshades platform, which is concerned with intentionally \& willingly switching engagement between stimuli from both real \& virtual environments, rather than engaging with stimuli from only a virtual environment in a scenario where stimuli from the real environment are considered a `distraction'.}}
+\newcommand{\breakinpresencefootnote}{\footnote{The definition of \textbf{break in presence} adopted herein is the second from Waterworth \& Waterworth~\cite{Waterworth2001} (p205): a movement along the focus axis away from presence in the real or a virtual environment \& toward absence, which also relates to a reduction in involvement. This differs to Slater \& Steed's original definition in~\cite{Slater2000} as they considered presence only in terms of attending to stimuli from a virtual environment, with a break in presence as a Gestalt switch to instead attending to stimuli from the real environment. Waterworth \& Waterworth's model considers presence in terms of attending to stimuli from either the real \textit{or a virtual} environment, with a break in presence representing absence in the sense of heightened conceptual load \& the resultant reduced perceptual processing of environmental stimuli originating from \textit{either} the real or a virtual environment. This definition better fits the situation invoked by the system developed in this thesis, which is concerned with intentionally \& willingly switching engagement between stimuli from both real \& virtual environments, rather than engaging with stimuli from only a virtual environment in a scenario where stimuli from the real environment are considered a `distraction'.}}
 
 The novel aspect of a PR system is the ability it imparts upon its user to switch their locus of attention between equivalent vantage points in RW \& VR environments. In order to achieve the highest quality of experience with this style of interaction with a PR system, it is vital to determine how best to implement the transitions; that is, to mitigate the increased cognitive load (manifesting as increased conceptual reasoning \& reduced perceptual processing) required to comprehend each transition, as increased cognitive load will detract from engagement with the environments \& reduce the user's willingness to perform subsequent transitions.
 
@@ -605,18 +613,18 @@ The novel aspect of a PR system is the ability it imparts upon its user to switc
 
 %This is achieved by the user performing transitions between RW visual stimuli \& VR visual stimuli, both presented via their HMD. This extends existing XR research by allowing the user to engage with the visual stimuli of the VR component of a XR system from any position \& at any time.
 
-Whilst some researchers support the notion that in systems where more than one environment competes for the user's locus of attention there is an `all or nothing' Gestalt switch between awareness of one environment \& the other~\cite{Slater2002}, which would result in a substantial increase in cognitive load upon each transition, the systems in this thesis have been developed in support of the contrary opinion; that switching locus of attention from the stimuli of one environment to those of another does not completely overrule the user's awareness of the former, that both environments can be perceived at the same time (albeit one to a lesser extent)~\cite{Ijsselsteijn2001} \& that when engaging with VR content a user's focus can even be said to typically be \textit{shared} between VR \& RW~\cite{Waterworth2001}, leading to a notion of `distributed' presence, or simultaneously experiencing a sense of presence in multiple environments.
+Whilst some researchers support the notion that in systems where more than one environment competes for the user's locus of attention there is an `all or nothing' Gestalt switch between awareness of one environment \& the other~\cite{Slater2002}, which would result in a substantial increase in cognitive load upon each transition, the system developed in this thesis supports the contrary opinion; that switching locus of attention from the stimuli of one environment to those of another does not completely overrule the user's awareness of the former, that both environments can be perceived at the same time (albeit one to a lesser extent)~\cite{Ijsselsteijn2001} \& that when engaging with VR content a user's focus can even be said to typically be \textit{shared} between VR \& RW~\cite{Waterworth2001}, leading to a notion of `distributed' presence, or simultaneously experiencing a sense of presence in multiple environments.
 
-This latter position is particularly apt for situations wherein the RW \& VR environments share the same fundamental layout \& dimensions (spatial equivalence), as those in the PR systems of this thesis do, as inherent familiarity between two environments reduces the cognitive load associated with transitioning between them.
+This latter position is particularly apt for situations wherein the RW \& VR environments share the same fundamental layout \& dimensions (spatial equivalence), as those of the PR system developed in this thesis does, as inherent familiarity between two environments intuitively reduces the cognitive load associated with transitioning between them.
 
 Furthermore, the notion of experience of presence as changing continually from moment-to-moment~\cite{Heeter2003, Ijsselsteijn1998} lends confidence to the successful mitigation of the cognitive load associated with these transitions to manageable levels. One might even liken this `switching' between RW \& VR to the `cycling through' behaviour observed in users of virtual communities, which stemmed from the `window' concept of modern computer operating systems~\cite{Turkle2004} \& accelerated with mobile devices to the point where for many users today rapid cycling stabilizes them into a sense of `continual copresence', where even just a mobile phone brings them into a world of continual partial attention to any particular subject or environment~\cite{Turkle2011}. The advent of mobile phones has previously been credited with allowing a person to \textit{``be in many places at once''} \& to play multiple roles~\cite{Terashima2001}. %HyperReality p148
 
-However, no matter how smooth the transition the process is expected to always result in some heightened cognitive load, a temporary \textit{break in presence}\breakinpresencefootnote{} (BIP), as the user comes to terms with the new environment presented to them \& comprehends its relation to the other environment that they were just perceiving. Transitions can be implemented in multiple different manners \& it is hypothesized that users will prefer different implementations in different situations, surroundings \& scenarios (where `preference' toward a particular implementation is expected to correlate strongly with a less severe BIP being experienced upon its execution). To this end, several different implementations are effected \& investigation endeavoured to identify \& quantify preferences toward them, to infer which approaches to transitioning between RW \& VR visual stimuli are more or less appropriate for the different situations that arise where a platform like those developed by this thesis may be deployed (such as moving, stationary, etc.).
+However, no matter how smooth the transitions, the process is expected to nonetheless result in some heightened cognitive load, a temporary \textit{break in presence}\breakinpresencefootnote{} (BIP), as the user comes to terms with the new environment presented to them \& comprehends its relation to the other environment that they were just perceiving. Transitions can be implemented in multiple different manners \& it is expected that users will prefer different implementations in different situations, surroundings \& scenarios (where `preference' toward a particular implementation is expected to correlate with a less severe BIP being experienced upon its execution). To this end, several different implementations are effected \& investigated to identify \& quantify preferences toward them, to infer which approaches to transitioning between RW \& VR visual stimuli are more or less appropriate for the different situations that arise where a platform like that developed in this thesis may be deployed (moving, stationary, etc.).
 
 \subsection{Transitions using the Combined Model}
 Visualised using the combined model (figure \ref{focus-locus-sensus-with-virtuality-continuum-with-transition}) these transitions are an oscillation along the locus axis, between a RW environment at one position \& a VR environment at the other.
 
-Heightened cognitive load required to comprehend a transition is a temporary movement upon the focus axis from presence toward absence (a BIP). With the ability of a wide FOV, stereoscopic 3D, head-tracked HMD to produce immersive VR visual stimuli that require fairly limited cognitive processing \& our inherent ability to engage with our RW surroundings without significant cognitive load, focus is expected to be high (toward the presence extremum) when attending to stimuli from either RW or VR.
+Heightened cognitive load required to comprehend a transition is a temporary movement upon the focus axis from presence toward absence (a BIP). With the ability of a wide FOV, stereoscopic 3D, head-tracked HMD (such as that used by the system developed in this thesis) to produce immersive VR visual stimuli that require fairly limited cognitive processing \& our inherent ability to engage with our RW surroundings without significant cognitive load, focus is expected to be high (toward the presence extremum) when attending to stimuli from either RW or VR.
 
 Sensus is expected to be largely task dependent, however when performing a task that involves actively engaging with the visual stimuli from either/both of RW or VR it is expected to be high (toward the conscious extremum). Upon triggering a transition, sensus is expected to increase, as the user centres their attention upon relating the visual stimuli from the new environment to those they were just perceiving from the other environment
 
@@ -701,7 +709,7 @@ Sensus is expected to be largely task dependent, however when performing a task 
 
 %ARCHEOGUIDE makes the point that AR is good because users are not isolated/completely immersed in a synthetic world - well Mirrorshades allows uers to more fully immerse themselves in a synthetic world, but without becoming isolated in it (eg without becoming ***vacant*** from the real world)
 
-A PR system that presents the user with visual stimuli from both its constituent environments (RW \& VR) allows that user to engage with both real \& virtual content in a manner that is similar to, but has a number of advantages over previous alternate reality systems, including traditional AR implementations \& XR systems;
+A PR system that presents the user with the choice between visual stimuli from both its constituent environments (RW \& VR) allows that user to engage with both real \& virtual content in a manner that is similar to, but has a number of advantages over previous alternate reality systems, including traditional AR implementations \& XR systems;
 
 \begin{itemize}
 	\item a PR system is less critical of registration (the accurate positioning/alignment) between real \& virtual, as virtual objects are seen as part of a larger virtual environment instead of being rendered atop a view of the real environment;
@@ -710,12 +718,12 @@ A PR system that presents the user with visual stimuli from both its constituent
 	\item the vacancy problem is further addressed, but instead of doing so by linking real \& virtual environments by sensor \& actuator infrastructure, vacancy in either environment is alleviated by furnishing users with the ability to transition between visual stimuli from each environment.
 \end{itemize}
 
-Thus, a PR platform is well suited to situations in which interaction with both real \& virtual visual stimuli is required \& where one or more of the following hold true;
+Thus, a PR platform is well suited to situations in which interaction with the visual stimuli of both real \& virtual environments is required \& where one or more of the following hold true;
 
 \begin{itemize}
 	\item in lieu of accurate registration between real \& virtual, there is a strong focus on the virtual environment's atmosphere \& immersion~\cite{deamicis:gamebased};
 	\item there is existing VR content;
-	\item the visual differences between real \& virtual environments are so substantial that an AR system would resort to augment (\&/or diminish~\cite{Mann2002}) almost the whole RW view. While AR \textit{``smears an informational coating over real space''}~\cite{Andersen}, PR presents a complete, discrete virtual environment. AR is beneficial where one wishes the juxtaposition of virtual objects upon what is already present in the RW environment, however VR is better suited to situations where one wishes to present a complete virtual alternative.
+	\item the visual differences between real \& virtual environments are so substantial that an AR system would resort to augment (\&/or diminish~\cite{Mann2002}) almost the whole RW view. While AR \textit{``smears an informational coating over real space''}~\cite{Andersen}, PR presents a complete virtual environment. AR is beneficial where one wishes the juxtaposition of virtual objects upon what is already present in the RW environment, however PR is better suited to situations where one wishes to present a complete virtual alternative.
 \end{itemize}
 
 %=========================================================================================================
@@ -723,10 +731,10 @@ Thus, a PR platform is well suited to situations in which interaction with both 
 \section{Conclusions}
 Decades of research into alternate realities has furnished us with a rich continuum of approaches \& technologies for creating, combining, augmenting \& diminishing real \& virtual environments. Many of the alternate reality labels that are now becoming commonplace are concerned with presenting a different environment to the user's real surroundings (as in telepresence \& virtual reality) or mixing additional information into the user's view of their real or virtual surroundings (as in augmented/diminished reality \& augmented virtuality).
 
-Although less thoroughly investigated, the concept of creating an alternate reality system by combining two environments, one real \& the other virtual \& both complete unto themselves, into a cross reality system presents an interesting avenue for furthering alternate reality techniques \& applications, in particular to addressing the vacancy problem that affects users when trying to share their attention between two environments.
+Although less thoroughly investigated, the concept of creating an alternate reality system by combining two environments, one real \& the other virtual \& both complete unto themselves, into a cross reality system presents an interesting avenue for furthering alternate reality techniques \& applications, in particular to addressing the vacancy problem that affects users when trying to distribute their attention between two environments.
 
-Previous cross reality research focussed on alleviating this vacancy problem by integrating sensor \& actuator infrastructure into the constituent real \& virtual environments of a system, such that actions \& events in one environment could manifest into the other. However directly visually engaging with both environments was not always possible in these systems \& where it was it was only possible from predetermined, static locations.
+Previous cross reality research focussed on alleviating this vacancy problem by integrating sensor \& actuator infrastructure into the constituent real \& virtual environments of a system, such that actions \& events in one environment could manifest into the other. However directly visually engaging with both environments was not often possible in these systems \& only from predetermined, static locations.
 
-This thesis serves to extend alternate reality research by designing, implementing \& testing a system that allows its user to visually engage with both a real \& a virtual environment, at any point, whilst maintaining mobility to walk through the environments. In trading the sensor/actuator infrastructure of a cross reality system for direct visual engagement with both environments, the parallel reality concept is born.
+This thesis serves to extend alternate reality research by developing a system that allows its user to visually engage with both a real \& a virtual environment, transitioning between them at any point, whilst maintaining mobility to walk through the environments in tandem. In trading the sensor/actuator infrastructure of a cross reality system for direct visual engagement with both environments, the parallel reality concept is born.
 
 Simply put in the terms of Lifton's original definition of the vacancy problem, this thesis aims to allow people to be in more than one place (reality) at a time.
