--- a/thesis.tex
+++ b/thesis.tex
@@ -90,13 +90,13 @@
 % ======= ======= ======= ======= ======= ======= =======
 
 \chapter{Background, Theory \& Rationale}
-%\input{03_background/background.tex}
 \graphicspath{ {03_background/images/} }
-\input{03_background/literature_review.tex}
+\input{03_background/background.tex}
+%\input{03_background/literature_review.tex}
 
 % ======= ======= ======= ======= ======= ======= =======
 
-\chapter{Virtual Time Window}
+\chapter{A Virtual Time Window}
 \graphicspath{ {04_vtw/} }
 \input{04_vtw/vtw.tex}
 
