Structuring VTW chapter

--- a/03_background/background.tex
+++ b/03_background/background.tex
@@ -313,6 +313,8 @@ PolySocial Reality (PoSR) describes situations in which people multiplex their p
 \section{Cross Reality}
 \label{sec_crossreality}
 
+\textbf{***Briefly mention standards, mainly ISO/IEC 23005 (MPEG-V)}
+
 \newcommand{\SLfootnote}{\footnote{Second Life.}}
 
 Cross Reality (XR) is the ubiquitous mixed reality situation that arises from the fusion of real-world sensor/actuator infrastructure with virtual environments, such that augmented reality and augmented virtuality manifest simultaneously and facilitate synchronous bidirectional exchange of media and control information between real and virtual environments. Sensors collect and tunnel dense real-world data into virtual environments where they are interpreted and displayed to dispersed users, whilst interaction of virtual participants simultaneously incarnates into the real world through a plenitude of diverse displays and actuators~\cite{Paradiso2009}.
